Testing chrome.tabs.create() and appending elements with arrays.

--- a/read.html
+++ b/read.html
@@ -7,11 +7,13 @@
 				width: 500px;
 				height: 500px;
 			}
+			h1 {text-align: center;}
 		</style>
 		<script src="read.js"></script>
 	</head>
 
 	<body>
-
+		<h1>24 Hour History Usage</h1>
+		<div id= 'Chart'></div>
 	</body>
 </html>
